--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="" />
     <title>Freelancer - Start Bootstrap Theme</title>
     <!-- ファビコン -->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets\img\icon.jpg" />
     <!-- Font Awesome アイコン (無料版)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google フォント -->
@@ -20,6 +20,7 @@
     <!-- Google Fonts からBIZ UDPゴシックを読み込む -->
     <link href="https://fonts.googleapis.com/css2?family=BIZ+UDPGothic:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+    <meta name="description" content="福島せいかさんのSNS共有サイトです。路上ライブなどで活用されています。福島せいかさんのことを広く知ってもらうために、ファンのひとりによって作られました。">
 </head>
 
 <body id="page-top">
@@ -165,7 +166,7 @@
             </div>
         </div>
     </section>
-    
+
     <!-- アバウトセクション -->
     <section class="page-section bg-primary text-white mb-0" id="about">
         <div class="container">
